# EVOX

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_MIGRATION_SUMMARY.md  CONTRIBUTING.md  DONATION.md  LICENSE  LICENSE.md  README.md  SECURITY.md  pyproject.toml
docs/: API.md  CONFIGURATION.md  CONTRIBUTING.md
evoid/: __init__.py
evoid/cli/: main.py
evoid/cli/templates/: config.toml
evoid/core/: __init__.py
evoid/core/application/: orchestrator.py  project_manager.py  service_builder.py
evoid/core/communication/: __init__.py  message_bus.py  proxy.py
evoid/core/communication/messaging/: message_bus.py
evoid/core/data/: __init__.py  data_io.py
evoid/core/data/intents/: annotated_intents.py  data_intents.py
evoid/core/data/persistence/: __init__.py  intent_router.py
evoid/core/data/storage/: registry.py
evoid/core/errors/: BaseError.py
evoid/core/infrastructure/: __init__.py
evoid/core/infrastructure/auth/: auth_manager.py
evoid/core/infrastructure/dependency_injection/: injector.py
evoid/core/infrastructure/module_management/: plugin_manager.py
evoid/core/infrastructure/queue/: priority_queue.py
evoid/core/mapping/: __init__.py  model_mapper.py
evoid/core/monitoring/intelligence/: environmental_intelligence.py
evoid/core/monitoring/metrics/: performance_tracker.py
evoid/core/utilities/caching/: cache_layer.py
evoid/core/utilities/models/: core_models.py
evoid/core/utilities/serialization/: fury_codec.py
evoid/pluggable_services/data_intent_service/: config.toml  main.py
evoid/pluggable_services/logging_service/: config.toml  main.py
evoid/pluggable_services/monitor_service/: main.py
evoid/pluggable_services/postgres_db/: config.toml  main.py
evoid/pluggable_services/redis_cache/: config.toml  main.py
evoid/pluggable_services/service_management_service/: main.py
evox/: __init__.py
evox/cli/: __init__.py  main.py
evox/core/: __init__.py  auth.py  config.py  data_io.py  inject.py  intelligence.py  intents.py  lifecycle.py  orchestrator.py  plugin_manager.py  proxy.py  queue.py  registry.py  scheduler.py  service_builder.py  storage.py  storage_provider.py
evox/core/application/: __init__.py  project_manager.py  service_builder.py
evox/core/communication/messaging/: __init__.py  message_bus.py
evox/core/data/intents/: annotated_intents.py  data_intents.py  intent_system.py  operation_intents.py
evox/core/data/storage/: __init__.py  registry.py
evox/core/data/storage/providers/: base_provider.py
evox/core/errors/: BaseError.py  __init__.py
evox/core/infrastructure/: __init__.py
evox/core/infrastructure/auth/: auth_manager.py
evox/core/infrastructure/dependency_injection/: injector.py
evox/core/infrastructure/module_management/: plugin_manager.py
evox/core/infrastructure/scheduler/: task_scheduler.py
evox/core/mapping/: model_mapper.py
evox/core/monitoring/intelligence/: environmental_intelligence.py
evox/core/serialization/: __init__.py  fury_codec.py
evox/core/storage/: __init__.py  data_io.py
evox/core/utilities/mapping/: model_mapper.py
evox/core_services/management_svc/: __init__.py  config.toml  main.py
evox/core_services/miniapp_svc/: main.py
evox/examples/: advanced_features_demo.py  beginner_start.py  intent_system_demo.py  modern_intents_demo.py
evox/examples/advanced_items_svc/: config.toml  main.py
evox/examples/basic_user_svc/: config.toml  main.py
evox/examples/enhanced_features/: dual_syntax_showcase.py  intelligence_template.py  template_example.py
evox/examples/enterprise_system/: config.toml  main.py
evox/examples/enterprise_system/providers/: base_provider.py
evox/examples/enterprise_system/services/: user_service.py
evox/examples/enterprise_system/shared/: models.py
evox/examples/health_demo_svc/: config.toml  main.py
evox/examples/nano_project/: config.toml  main.py
evox/examples/smart_gateway/: config.toml  main.py
evox/examples/smart_gateway/gateway/: intelligence_engine.py
evox/examples/smart_gateway/services/: gateway_service.py
evox/examples/storage_demo_svc/: config.toml  main.py
evox/pluggable_services/data_intent_service/: main.py
evox/pluggable_services/logging_service/: main.py
evox/pluggable_services/monitor_service/: config.toml  main.py
evox/pluggable_services/postgres_db/: config.toml  main.py
evox/pluggable_services/redis_cache/: config.toml  main.py
evox/pluggable_services/service_management_service/: config.toml  main.py
examples/: 01_hello_world.py  02_comprehensive_showcase.py  03_intent_system.py  04_microservices.py  05_enterprise_system.py  06_project_scaffolding.py  07_docker_deployment.py  08_project_workflow.py  09_cli_workflow_demo.py  README.md
infra/: Dockerfile.service  docker-compose.yml  init.sql  nginx.conf
test_cli_dir/test_project/: README.md  config.toml  pyproject.toml
test_project_for_service/myproject/: README.md  pyproject.toml
test_project_for_service/myproject/services/user_service/: config.toml  main.py
wiki/: _Sidebar.md
wiki/en/: ARCHITECTURE.md  ARCHITECTURE_MIGRATION_SUMMARY.md  Architecture.md  Configuration.md  Contributing.md  Development.md  Docker.md  GETTING_STARTED.md  GITHUB_READY_SUMMARY.md  Home.md  NEW_ARCHITECTURE.md  Production.md
wiki/fa/: Home.md
